Bioudie page.mdx
Signed-off-by: BIOUDIE <41976717+BIOUDIE@users.noreply.github.com>

--- a/src/app/contracts/deploy/overview/page.mdx
+++ b/src/app/contracts/deploy/overview/page.mdx
@@ -1,30 +1,91 @@
-import { createMetadata } from "@doc";
 
-export const metadata = createMetadata({
-	image: {
-		title: "thirdweb Deploy",
-		icon: "contract",
-	},
-	title: "thirdweb Deploy",
-	description:
-		"Deploy is a tool to deploy any contract to any EVM compatible chain through one simple command and an easy-to-use interface. Deploy reduces the complexities of deploying a contract by eliminating steps such as hardcoding private keys, managing RPC URLs, or running scripts to deploy your contracts.",
-});
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
 
-# Deploy
-
-Deploy is a tool to deploy any contract to any EVM compatible chain through one simple command and an easy-to-use interface. Deploy reduces the complexities of deploying a contract by eliminating steps such as hardcoding private keys, managing RPC URLs, or running scripts to deploy your contracts.
-
-Simply run the following command at the root of your contract directory:
-
-```bash
-npx thirdweb deploy
-```
-
-#### Features
-
-- **Automatically verified contracts:** Contracts deployed using Deploy are automatically verified on [Sourcify](https://sourcify.dev/).
-- **Client-side deployment (increased security):** Deploy simplifies contract deployment with an intuitive dashboard. Users can avoid exporting / storing private keys, setting up RPC URLs, copying ABIs, or running scripts.
-- **No additional setup:** There is no need to modify your contract or do any additional setup. Deploy works with any contract, including those created with popular frameworks such as Hardhat and Foundry.
-- **Deploy to any EVM network:** Deploy supports the deployment of a contract to any EVM network.
-- **Dashboard management:** Automatically add your contracts to dashboard to setup constructors, manage and interact with your contract.
-- **Support for browser based wallets:** Deploy a contract using browser-based wallets like MetaMask, Coinbase Wallet, and others. Alternatively, deploy safely with a team using options such as Safe.
+contract BioudieCommunity {
+    string public name = "BioudieCommunity";
+    string public symbol = "BOD";
+    uint8 public decimals = 18;
+    uint256 public totalSupply = 1000000 * (10 ** uint256(decimals));
+    address public owner;
+   
+    mapping(address => uint256) balances;
+    mapping(address => mapping(address => uint256)) allowances;
+   
+    event Transfer(address indexed from, address indexed to, uint256 value);
+    event Approval(address indexed owner, address indexed spender, uint256 value);
+   
+    constructor() {
+        owner = msg.sender;
+        balances[owner] = totalSupply;
+    }
+   
+    modifier onlyOwner() {
+        require(msg.sender == owner, "Only the owner can call this function.");
+        _;
+    }
+   
+    function balanceOf(address account) public view returns (uint256) {
+        return balances[account];
+    }
+   
+    function transfer(address recipient, uint256 amount) public returns (bool) {
+        require(recipient != address(0), "ERC20: transfer to the zero address");
+        require(amount <= balances[msg.sender], "ERC20: transfer amount exceeds balance");
+       
+        balances[msg.sender] -= amount;
+        balances[recipient] += amount;
+       
+        emit Transfer(msg.sender, recipient, amount);
+       
+        return true;
+    }
+   
+    function approve(address spender, uint256 amount) public returns (bool) {
+        allowances[msg.sender][spender] = amount;
+       
+        emit Approval(msg.sender, spender, amount);
+       
+        return true;
+    }
+   
+    function transferFrom(address sender, address recipient, uint256 amount) public returns (bool) {
+        require(recipient != address(0), "ERC20: transfer to the zero address");
+        require(amount <= balances[sender], "ERC20: transfer amount exceeds balance");
+        require(amount <= allowances[sender][msg.sender], "ERC20: transfer amount exceeds allowance");
+       
+        balances[sender] -= amount;
+        balances[recipient] += amount;
+        allowances[sender][msg.sender] -= amount;
+       
+        emit Transfer(sender, recipient, amount);
+       
+        return true;
+    }
+   
+    function allowance(address account, address spender) public view returns (uint256) {
+        return allowances[account][spender];
+    }
+   
+    function burn(uint256 amount) public returns (bool) {
+        require(amount <= balances[msg.sender], "ERC20: burn amount exceeds balance");
+       
+        balances[msg.sender] -= amount;
+        totalSupply -= amount;
+       
+        emit Transfer(msg.sender, address(0), amount);
+       
+        return true;
+    }
+   
+    function mint(uint256 amount) public onlyOwner returns (bool) {
+        require(totalSupply + amount <= 2**256 - 1, "ERC20: total supply exceeds uint256");
+       
+        balances[owner] += amount;
+        totalSupply += amount;
+       
+        emit Transfer(address(0), owner, amount);
+       
+        return true;
+    }
+}
